# UMPAnUMiW

./: .gitignore  CMakeLists.txt  README.md  main.cpp
api/: CMakeLists.txt  camera_api.hpp  rpi_raspistill.cpp  win_fake.cpp
inc/: common.hpp  document.hpp  image.hpp  io.hpp
src/: common.cpp  document.cpp  image.cpp  io.cpp
